<resources>
    <string name="app_name">Maps</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="waiting">processing</string>
    <string name="updating">Updating</string>
    <string name="do_not_show_this_message">Don\'t show again</string>
    <string name="tab_all">All</string>
    <string name="node_createButtom">Create</string>
    <string name="node_cancelButtom">Cancel</string>
    <string name="alert_map_delete_title">Remove Map</string>
    <string name="alert_map_delete_message">The map will be removed.\nThe photos in the map will not be removed from your device.</string>
    <string name="alert_changeParent_title">Change parent node</string>
    <string name="alert_changeParent_message">Makes the selected node the parent node.</string>
    <string name="alert_deletePicture_title">Remove Photo</string>
    <string name="alert_deletePicture_message">
        <![CDATA[
            Remove the selected photo from the node.
            \n*The photo will not be removed from your device.
        ]]>
    </string>
    <string name="alert_deletePicture_messageAdd">\n*Thumbnail is not deleted.</string>
    <string name="alert_movePicture_title">Move photo</string>
    <string name="alert_movePicture_message">Do you want to move the photo to the selection node?</string>
    <string name="alert_movePicture_messageAdd">
        <![CDATA[
            \n*If the selected "picture node" has the same photo, that photo will not be moved.
            \n*Thumbnail is not moved.
        ]]>
    </string>
    <string name="alert_deleteNode_title">Remove node</string>
    <string name="alert_deleteNode_message">All subordinate nodes will also be removed.\nThe photos in the node will not be removed from your device.</string>
    <string name="alert_launch_mapList_title">At first</string>
    <string name="alert_launch_mapList_message">Let\'s create a map. Press "New Map".</string>
    <string name="alert_launch_mapEntry_title">Creating a map</string>
    <string name="alert_launch_mapEntry_message">Enter the map name and choose the color you like.\n(Colors can be added even after the map is created)</string>
    <string name="alert_launch_gallery_title">Synchronization</string>
    <string name="alert_launch_gallery_message">If you want to reflect the image storage status in the device, please restart this application.</string>
    <string name="alert_trimming_ui_title">Reflection of image cropping range</string>
    <string name="alert_trimming_ui_message">In this image, the crop area is reflected when you take your finger off the crop line.</string>
    <string name="alert_trimming_sameThumbnail_title">It can not be selected</string>
    <string name="alert_trimming_sameThumbnail_message">The same image is already in use on another node.</string>
    <string name="alert_trimming_disableDirectory_title">Please select again</string>
    <string name="alert_trimming_disableDirectory_message">Select a photo from the "Images" folder.</string>
    <string name="alert_trimming_removed_title">Please select again</string>
    <string name="alert_trimming_removed_message">The currently selected image has been deleted from the device.</string>
    <string name="alert_trimming_anotherPicture_ok">Select another image</string>
    <string name="toast_finishSave">Saved</string>
    <string name="toast_error">An error has occurred</string>
    <string name="toast_errorRgb">Please enter 0~9/A~F(a~f)</string>
    <string name="toast_errorFont">Currently unavailable</string>
    <string name="toast_reachUpperLimitNode">The maximum number of nodes has been reached</string>
    <string name="toast_reachUpperLimitPictureNode">The maximum number of picture nodes has been reached</string>
    <string name="toast_reachUpperLimitHierarchy">The maximum number of picture nodes has been reached</string>
    <string name="toast_deletePicture">Removed the image</string>
    <string name="toast_errorChangeParent">That node cannot be a parent node</string>
    <string name="toast_nowParent">The current parent node</string>
    <string name="toast_childNode">Cannot make its own child node a parent node</string>
    <string name="toast_errorMapName">Please enter the map name</string>
    <string name="toast_samePicture">The same images is already stored</string>
    <string name="toast_reSelectPicture">Please select the photo again</string>
    <string name="toast_errorGetPath">Failure</string>
    <string name="toast_storePicture">The image was stored in the node\n(Images that are already stored will not be stored)</string>
    <string name="toast_storeError">Error: Please select from the "Images" folder</string>
    <string name="toast_orientationError">When adding a photo, operate with the screen orientation fixed.</string>
    <string name="toast_moved">The photo has been moved.</string>
    <string name="toast_notMoves">No photos moved.</string>
    <string name="toast_cannotThumbnailMove">Thumbnail cannot be moved.</string>
    <string name="toast_cannotThumbnailDelete">Thumbnail cannot be removed.</string>
    <string name="toast_qeuestPermission">Please allow access to the media</string>
    <string name="toast_qeuestPermissionFirst">If you want to display the image on the map,\nplease change to permission</string>
    <string name="bt_new_map">New Map</string>
    <string name="map_create_sample">Sample</string>
    <string name="map_create_sample_A">A</string>
    <string name="map_create_tab1">Map name</string>
    <string name="map_create_tab2">2Colors</string>
    <string name="map_create_tab3">3Colors</string>
    <string name="map_create_tab4">Generation</string>
    <string name="hint_map_memo">note(Max.128 text)</string>
    <string name="toolbar_titleMapEdit">Map Edit</string>
    <string name="toolbar_map_changeParant">Change parent node</string>
    <string name="toolbar_titleTrimming">Creating thumbnail</string>
    <string name="toolbar_titleGallery">Gallery</string>
    <string name="toolbar_titleGalleryMulti">Multiple selection</string>
    <string name="move_picture_title">Please select the destination node</string>
    <string name="menu_help">help</string>
    <string name="menu_palette">Palette</string>
    <string name="menu_folderTree">FolderTree</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_accessGallery">Access Storage</string>
    <string name="menu_nodeShape">Node Shape</string>
    <string name="menu_close">Close</string>
    <string name="menu_movePicture">Move Picture</string>
    <string name="menu_removePicture">Remove Picture</string>
    <string name="tab_node_name">Node name</string>
    <string name="tab_thumnbnail">Thumbnail</string>
    <string name="change_thumnbnail">Change Thumbnail</string>
    <string name="tab_map_color">Map color</string>
    <string name="tab_map_effect">Effect</string>
    <string name="tab_font">Font</string>
    <string name="tab_text_color">Text Color</string>
    <string name="tab_size">Size</string>
    <string name="tab_node_color">Node Color</string>
    <string name="tab_border_color">Frame color</string>
    <string name="tab_line_color">Line color</string>
    <string name="tab_shadow">Shadow</string>
    <string name="tab_shape">Shape</string>
    <string name="coloeCodeHint">123456</string>
    <string name="map_nameHint">Max.16 text</string>
    <string name="node_nameHint">Max.16 text(3 lines)</string>
    <string name="title_nodeName">Node name</string>
    <string name="title_nodeSize">Node Size</string>
    <string name="title_nodeShape">Node Shape</string>
    <string name="title_nodeBackgroundColor">Node background color</string>
    <string name="title_nodeTextColor">Node text color</string>
    <string name="title_lineShape">Line shape</string>
    <string name="title_lineThickness">Line thickness</string>
    <string name="title_lineColor">Line color</string>
    <string name="title_mapDesign">Map Design</string>
    <string name="title_mapBackgroundColor">Map color</string>
    <string name="subtitle_monochromatic">Monochromatic</string>
    <string name="subtitle_gradation">Gradation</string>
    <string name="subtitle_gradationDir">Gradation Direction</string>
    <string name="shape_common">Common</string>
    <string name="shape_pictureNodeOnly">Picture Node Only</string>
    <string name="font_sample_alphabet">A</string>
    <string name="font_sample_japanese">あ</string>
    <string name="font_alphabet">Alphabet</string>
    <string name="font_japanese">Japanese</string>
    <string name="color_rgb">Code</string>
    <string name="color_graphic">Palette</string>
    <string name="size_node">Node Size</string>
    <string name="size_border">Frame thickness</string>
    <string name="size_line">Line thickness</string>
    <string name="shadow_on_off">ON／OFF</string>
    <string name="tree_title">Node list</string>
    <string name="tree_title2">(Touch a node name to move it to the center of the screen)</string>
    <string name="no_nodeName">(No Name)</string>
    <string name="no_nodeNamePictureNode">Picture Node</string>
    <string name="top_nodeName">・</string>
    <string name="help_icon_title">Icon Description</string>
    <string name="help_icon_add_name">Node generation</string>
    <string name="help_icon_add">You can add a new node to the touched node.</string>
    <string name="help_icon_add_note">*Up to "5" nodes can be created in one node.</string>
    <string name="help_icon_add_picture_node_name">Picture node generation</string>
    <string name="help_map_title_basic_ope">Basic operation</string>
    <string name="help_map_title_picture">About Images</string>
    <string name="help_map_basic_details1">First, let\'s touch the node!\nYou can display the operation icon.\nBy selecting the icon, you can create a node or link a photo.</string>
    <string name="help_map_basic_details1_note">*If you select the "? Icon", you can check the contents of each icon.</string>
    <string name="help_map_basic_sample1">Introduction of operation method 1</string>
    <string name="help_map_basic_sample1_title">～You want to create a new node～</string>
    <string name="help_map_basic_sample1_details1">1.Touch the node</string>
    <string name="help_map_basic_sample1_details2">2.Select "node creation icon"</string>
    <string name="help_map_basic_sample2">Introduction of operation method 2</string>
    <string name="help_map_basic_sample2_title">～You want to store a photo in a "picture node"～</string>
    <string name="help_map_basic_sample2_details1">1.Touch the node</string>
    <string name="help_map_basic_sample2_details2">2.Select "Picture node creation icon"</string>
    <string name="help_map_basic_sample2_details3">3.Select your favorite photo</string>
    <string name="help_map_basic_sample2_details4">4.Touch the created image node</string>
    <string name="help_map_basic_sample2_details5">5.Select "Photo storage icon"</string>
    <string name="help_map_basic_sample2_details6">6.Feel free to choose your photo</string>
    <string name="help_map_basic_sample2_details7">If you want to see the photos stored in the node, select "Gallery Icon"</string>
    <string name="help_map_aboutPicture_1">In this application, the image saved in your terminal is managed by associating it with the node on the map.</string>
    <string name="help_map_aboutPicture_2">・If the image on the device is deleted or the storage location is changed, it will also be deleted from the map. Be careful.</string>
    <string name="help_map_aboutPicture_3">Images that can no longer be linked</string>
    <string name="help_map_aboutPicture_4">・This application does not have the ability to delete images in the device.\nRemoving a node or photo from the map does not remove the image from the device.</string>
</resources>