<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="12dp"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/help_title_size"
                android:text="@string/help_map_title_basic_ope" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_details1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_details1_note" />

            <!--  操作例①　-->
            <TextView
                app:autoSizeMinTextSize="@dimen/help_autoSizeMinTextSize"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeTextType="uniform"
                android:layout_width="match_parent"
                android:layout_height="@dimen/help_head3_height"
                android:gravity="center"
                android:layout_marginTop="60dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample1" />

            <TextView
                app:autoSizeMinTextSize="@dimen/help_autoSizeMinTextSize"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeTextType="uniform"
                android:layout_width="match_parent"
                android:layout_height="@dimen/help_head3_height"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample1_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample1_details1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample1_details2" />

            <ImageView
                android:layout_width="@dimen/help_icon_size"
                android:layout_height="@dimen/help_icon_size"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/baseline_add_24" />

            <!--  操作例② -->
            <TextView
                app:autoSizeMinTextSize="@dimen/help_autoSizeMinTextSize"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeTextType="uniform"
                android:layout_width="match_parent"
                android:layout_height="@dimen/help_head3_height"
                android:gravity="center"
                android:layout_marginTop="60dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample2" />

            <TextView
                app:autoSizeMinTextSize="@dimen/help_autoSizeMinTextSize"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeTextType="uniform"
                android:layout_width="match_parent"
                android:layout_height="@dimen/help_head3_height"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample2_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample2_details1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample2_details2" />

            <ImageView
                android:layout_width="@dimen/help_icon_size"
                android:layout_height="@dimen/help_icon_size"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/baseline_add_picture_node_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample2_details3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample2_details4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample2_details5" />

            <ImageView
                android:layout_width="@dimen/help_icon_size"
                android:layout_height="@dimen/help_icon_size"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/baseline_add_photo_library_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample2_details6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_basic_sample2_details7" />

            <ImageView
                android:layout_width="@dimen/help_icon_size"
                android:layout_height="@dimen/help_icon_size"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/baseline_photo_library_24" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>