<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/help_title_size"
                android:text="@string/help_map_title_picture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_aboutPicture_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_aboutPicture_2" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_no_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/help_map_aboutPicture_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/help_map_aboutPicture_4" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>